--- a/MVC-Burger-Project/Views/Burger/Menu.cshtml
+++ b/MVC-Burger-Project/Views/Burger/Menu.cshtml
@@ -3,20 +3,51 @@
 @model MenuViewModel
 
 
-<div class="form-popup" id="myForm">
-    <form action="/action_page.php" class="form-container">
-        <h1>Login</h1>
+<div class="form-popup border-warning justify-content-center ml-3" id="myForm">
+    <form class="container bg-black text-white justify-content-center">
+        <div id="productImage" class="justify-content-center text-center"></div>
+        <h1 class="text-warning text-center" id="productTitle"></h1>
+        <p class="text-white" id="productDescription"></p>
 
-        <label for="burgerName"><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" name="burgerName" readonly>
+        <div class="row">
+            <div class="col-6 ml-3 mb-2">
+                <label class="text-warning"><b class="text-warning">Menu Price:</b></label>
+                <span class="ml-1 text-white" id="productPrice"></span>
+                <br />
+                <label class="text-white" for="drink"><b class="text-warning">Drink:</b></label>
+                <label class="text-white" id="productDrink" for="drink"></label>
+                <br />
+                <label class="text-white" for="side"><b class="text-warning">Side:</b></label>
+                <label class="text-white" id="productSide" for="side"></label>
+                <br />
+                <label class="text-white" for="size"><b class="text-warning">Menu Size:</b></label>
+                <label class="text-white" id="productSize" for="size"></label>
+            </div>
+            <div class="col-6 mb-2">
+                <label class="text-danger" for="ingredients"><b class="text-warning">Ingredients:</b></label>
+                <div id="ingredients" class="text-white">
+                </div>
+            </div>
+        </div>
 
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
+        @* <br />
+        <label class="text-white" for="side">Ingredients:</label>
+        @foreach(BurgerIngredient burgerIngredient in Model.Burgers)
+        @foreach (Ingredient ingredient in Model.Ingredients)
+        {
+        @if (Model.Burgers.Contains(ingredient))
+        <input type="checkbox" id="ingredients" value="@ingredient.IngredientID" />
+        <label for="ingredients">@ingredient.Ingredient.Name</label>
 
-        <button type="submit" class="btn">Login</button>
-        <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+
+        } *@
+        <div class="text-center">
+            <button type="button" class="btn btn-outline-success mb-3" onclick="addToCart()">Add To Cart <i class="fa-solid fa-cart-plus"></i></button>
+            <button type="button" class="btn btn-outline-danger mb-3 ml-3" onclick="closeForm()">Close <i class="fa-solid fa-square-xmark"></i></button>
+        </div>
     </form>
 </div>
+
 <body>
     <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -36,9 +67,11 @@
                     <div class="section_title text-center mb-80">
                         <span>Burger Menu</span>
                         <h3>Best Ever Burgers</h3>
+
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
                     <div class="container-fluid">
@@ -52,15 +85,6 @@
 
                                     }
                                 </tr>
-                                @* <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
-                                </li>
-                                <li class="nav-item">
-                                <a class="nav-link" href="#">Pricing</a>
-                                </li>*@
                             </table>
                         </div>
                     </div>
@@ -79,7 +103,6 @@
                     {
                         @if (item.Name == menu.Burger.Category.Name)
                         {
-
                             <div class="col-xl-6 col-md-6 col-lg-6">
                                 <div class="single_delicious d-flex align-items-center">
                                     <div class="thumb">
@@ -88,8 +111,22 @@
                                     <div class="info">
                                         <h3>@menu.Burger.Name Menu</h3>
                                         <p>@menu.Burger.Description</p>
+                                        <div id="@menu.BurgerID" class="ingredientss" style="display:none">
+                                            <table>
+
+
+                                                @foreach (BurgerIngredient ingredient in menu.Burger.BurgerIngredients)
+                                                {
+                                                    <tr>-@ingredient.Ingredient.Name </tr>
+                                                }
+
+                                            </table>
+                                        </div>
                                         <span>$@menu.TotalPrice </span>
-                                        <a class="btn btn-outline-success mr-3 mt-3" onclick="openForm()">Add To Cart<i class="fa-solid fa-cart-plus ml-3"></i></a><a href="#" class="btn btn-outline-info mt-3">More Details<i class="fa-solid fa-circle-info ml-3 "></i></a>
+                                        <a asp-action="SelectAMenu" asp-route-id="@menu.MenuID" class="btn btn-outline-success mt-3">
+                                            Add To Cart <i class="fa-solid fa-cart-plus ml-3"></i>
+                                        </a>
+                                        <a class="btn btn-outline-info mt-3" href="javascript:void(0);" onclick="openForm({ id:'@menu.BurgerID',image:'@menu.Burger.Picture', title: '@menu.Burger.Name', description: '@menu.Burger.Description', price: '@menu.TotalPrice',size: '@menu.Size.Name',drink:'@menu.Drink.Name',side:'@menu.Side.Name' })">More Details <i class="fa-solid fa-circle-info ml-3"></i></a>
 
                                     </div>
                                 </div>
@@ -111,13 +148,9 @@
                                     <div class="info">
                                         <h3>@side.Name</h3>
                                         <span>$@side.Price </span>
-                                        <a class="btn btn-outline-success mr-3 mt-3" onclick="openForm()">
-                                            Add To Cart<i class="fa-solid fa-cart-plus ml-3"></i>
-
+                                        <a asp-action="SelectASide" asp-route-id="@side.ID" class="btn btn-outline-success mt-3">
+                                            Add To Cart <i class="fa-solid fa-cart-plus ml-3"></i>
                                         </a>
-
-                                        <a href="#" class="btn btn-outline-info mt-3">More Details<i class="fa-solid fa-circle-info ml-3"></i></a>
-
                                     </div>
                                 </div>
                             </div>
@@ -138,7 +171,10 @@
                                     <div class="info">
                                         <h3>@drink.Name</h3>
                                         <span>$@drink.Price </span>
-                                        <a class="btn btn-outline-success mr-3 mt-3" onclick="openForm()">Add To Cart<i class="fa-solid fa-cart-plus ml-3"></i></a><a href="#" class="btn btn-outline-info mt-3">More Details<i class="fa-solid fa-circle-info ml-3 "></i></a>
+                                        <a asp-action="SelectADrink" asp-route-id="@drink.ID" class="btn btn-outline-success mt-3">
+                                            Add To Cart <i class="fa-solid fa-cart-plus ml-3"></i>
+                                        </a>
+
 
                                     </div>
                                 </div>
@@ -157,7 +193,10 @@
                                     <div class="info">
                                         <h3>@sauce.Name</h3>
                                         <span>$@sauce.Price </span>
-                                        <a class="btn btn-outline-success mr-3 mt-3" onclick="openForm()">Add To Cart<i class="fa-solid fa-cart-plus ml-3"></i></a><a href="#" class="btn btn-outline-info mt-3">More Details<i class="fa-solid fa-circle-info ml-3"></i></a>
+                                        <a asp-action="SelectASauce" asp-route-id="@sauce.ID" class="btn btn-outline-success mt-3">
+                                            Add To Cart <i class="fa-solid fa-cart-plus ml-3"></i>
+                                        </a>
+
                                     </div>
                                 </div>
                             </div>
@@ -170,15 +209,24 @@
     </div>
     <!-- best_burgers_area_end  -->
     <script>
-        //Pop-up Form Start
-        function openForm() {
+        function openForm(product) {
+            document.getElementById("productImage").innerHTML = '<img  src="/img/burger/' + product.image + '" alt="Product Image">';
+            document.getElementById("productTitle").textContent = product.title + " Menu";
+            document.getElementById("ingredients").textContent = document.getElementById(product.id).textContent;
+            document.getElementById("productDescription").textContent = product.description;
+            document.getElementById("productPrice").textContent = "$" + product.price;
+            document.getElementById("productSize").textContent = product.size;
+            document.getElementById("productDrink").textContent = product.drink;
+            document.getElementById("productSide").textContent = product.side;
             document.getElementById("myForm").style.display = "block";
+            document.body.style.overflow = 'hidden';
         }
+
 
         function closeForm() {
             document.getElementById("myForm").style.display = "none";
+            document.body.style.overflow = 'auto';
         }
-                                //Popup Form End
     </script>
     @* <script>
     $(document).ready(function () {
