--- a/MVC-Burger-Project/Views/Shared/_Layout.cshtml
+++ b/MVC-Burger-Project/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/magnific-popup.css">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
@@ -22,12 +22,13 @@
     <link rel="stylesheet" href="/css/slicknav.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/burger.css">
+    <link rel="stylesheet" href="/css/loginregister.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 <body>
     <!-- header-start -->
     <header>
-        <div class="header-area" style="z-index:15">
+        <div class="header-area" style="z-index:15; background-color: black">
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid p-0">
                     <div class="row align-items-center no-gutters">
@@ -35,17 +36,17 @@
                             <div class="main-menu d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a asp-action="Index" asp-controller="Burger" name="Index" id="indexLink">Home</a></li>
-                                        <li><a asp-action="Menu" asp-controller="Burger" name="Menu" id="menuLink">Menu</a></li>
-                                        <li><a asp-action="AboutUs" asp-controller="Burger" name="AboutUs" id="aboutusLink">About Us</a></li>
-                                        <li><a asp-action="Contact" asp-controller="Burger" id="contactLink">Contact</a></li>
+                                        <li><a asp-area="" class="text-decoration-none" asp-action="Index" asp-controller="Burger" name="Index">Home</a></li>
+                                        <li><a asp-area="" class="text-decoration-none" asp-action="Menu" asp-controller="Burger" name="Menu">Menu</a></li>
+                                        <li><a asp-area="" class="text-decoration-none" asp-action="AboutUs" asp-controller="Burger" name="AboutUs">About Us</a></li>
+                                        <li><a asp-area="" class="text-decoration-none" asp-action="Contact" asp-controller="Burger" name="Contact">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
                         </div>
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
-                                <a asp-controller="Burger" asp-action="Index">
+                                <a asp-area="" asp-controller="Burger" asp-action="Index">
                                     <img src="/img/newlogo.png" alt="">
                                 </a>
                             </div>
@@ -55,29 +56,16 @@
                                 <div class="socail_links">
                                     <ul>
                                         <li>
-                                            <a href="#">
-                                                <i class="fa fa-instagram"></i>
+                                            <a asp-area="" asp-action="MyCart" asp-controller="Burger" class="btn btn-outline-warning border-0">
+                                                <b>My Cart <i class="fa-solid fa-cart-shopping"></i></b>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
-                                                <i class="fa fa-twitter"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-facebook"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-google-plus"></i>
-                                            </a>
+                                            <div class="nav-item" style="display: flex;">
+                                                @Html.Partial("_LoginPartial")
+                                            </div>
                                         </li>
                                     </ul>
-                                </div>
-                                <div class="book_btn d-none d-xl-block">
-                                    <a class="#" href="#">+10 367 453 7382</a>
                                 </div>
                             </div>
                         </div>
@@ -90,7 +78,6 @@
         </div>
     </header>
     <!-- header-end -->
-
     <div>
         <main role="main" class="pb-3">
             @RenderBody()
@@ -101,7 +88,6 @@
             id="btn-back-to-top">
         <i class="fa-solid fa-circle-chevron-up"></i>
     </button>
-
     <footer class="footer">
         <div class="footer_top">
             <div class="container">
@@ -185,7 +171,7 @@
     <script src="/js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/owl.carousel.min.js"></script>
     <script src="/js/isotope.pkgd.min.js"></script>
     <script src="/js/ajax-form.js"></script>
@@ -209,18 +195,6 @@
     <script src="/js/mail-script.js"></script>
 
     <script src="/js/main.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            var navbar = document.querySelector("#navigation").querySelectorAll("a");
-
-            navbar.forEach(element => {
-                element.addEventListener("click", function () {
-                    navbar.forEach(nav => nav.classList.remove("active"));
-                    this.classList.add("active");
-                });
-            });
-        });
-    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
